Video recording implemented
closing camera and mic after recording.

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Record Voice - No paper work!</title>
+    <title>React getUserMedia (Record audio and video with browser features) - No paper work!</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
